feat: add api get category for admin
